--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/timmyt/Downloads/xchart-3.5.2/xchart-3.5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
