Made changes to pom file/project in general to use dependencies as opposed to referencing source code.

--- a/pom.xml
+++ b/pom.xml
@@ -1,88 +1,99 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>audio-detect</groupId>
-	<artifactId>audio-detect</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-compiler-plugin</artifactId>
-										<versionRange>[3.1,)</versionRange>
-										<goals>
-											<goal>compile</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-compiler-plugin</artifactId>
-										<versionRange>[3.1,)</versionRange>
-										<goals>
-											<goal>testCompile</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-resources-plugin</artifactId>
-										<versionRange>[2.6,)</versionRange>
-										<goals>
-											<goal>resources</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-resources-plugin</artifactId>
-										<versionRange>[2.6,)</versionRange>
-										<goals>
-											<goal>testResources</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <modelVersion>4.0.0</modelVersion>
+        <groupId>audio-detect</groupId>
+        <artifactId>audio-detect</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <build>
+                <pluginManagement>
+                        <plugins>
+                                <plugin>
+                                        <groupId>org.eclipse.m2e</groupId>
+                                        <artifactId>lifecycle-mapping</artifactId>
+                                        <version>1.0.0</version>
+                                        <configuration>
+                                                <lifecycleMappingMetadata>
+                                                        <pluginExecutions>
+                                                                <pluginExecution>
+                                                                        <pluginExecutionFilter>
+                                                                                <groupId>org.apache.maven.plugins</groupId>
+                                                                                <artifactId>maven-compiler-plugin</artifactId>
+                                                                                <versionRange>[3.1,)</versionRange>
+                                                                                <goals>
+                                                                                        <goal>compile</goal>
+                                                                                </goals>
+                                                                        </pluginExecutionFilter>
+                                                                        <action>
+                                                                                <ignore></ignore>
+                                                                        </action>
+                                                                </pluginExecution>
+                                                                <pluginExecution>
+                                                                        <pluginExecutionFilter>
+                                                                                <groupId>org.apache.maven.plugins</groupId>
+                                                                                <artifactId>maven-compiler-plugin</artifactId>
+                                                                                <versionRange>[3.1,)</versionRange>
+                                                                                <goals>
+                                                                                        <goal>testCompile</goal>
+                                                                                </goals>
+                                                                        </pluginExecutionFilter>
+                                                                        <action>
+                                                                                <ignore></ignore>
+                                                                        </action>
+                                                                </pluginExecution>
+                                                                                           <pluginExecution>
+                                                                        <pluginExecutionFilter>
+                                                                                <groupId>org.apache.maven.plugins</groupId>
+                                                                                <artifactId>maven-resources-plugin</artifactId>
+                                                                                <versionRange>[2.6,)</versionRange>
+                                                                                <goals>
+                                                                                        <goal>testResources</goal>
+                                                                                </goals>
+                                                                        </pluginExecutionFilter>
+                                                                        <action>
+                                                                                <ignore></ignore>
+                                                                        </action>
+                                                                </pluginExecution>
+                                                                
+                                                                                                                  <pluginExecution>
+                                                                        <pluginExecutionFilter>
+                                                                                <groupId>org.apache.maven.plugins</groupId>
+                                                                                <artifactId>maven-resources-plugin</artifactId>
+                                                                                <versionRange>[2.6,)</versionRange>
+                                                                                <goals>
+                                                                                        <goal>resources</goal>
+                                                                                </goals>
+                                                                        </pluginExecutionFilter>
+                                                                        <action>
+                                                                                <ignore></ignore>
+                                                                        </action>
+                                                                </pluginExecution>
+                                                        </pluginExecutions>
+                                                </lifecycleMappingMetadata>
+                                        </configuration>
+                                </plugin>
+                        </plugins>
+                </pluginManagement>
+        </build>
 
-		</pluginManagement>
+        <dependencies>
 
+                <dependency>
+                    <groupId>com.github.wendykierp</groupId>
+                    <artifactId>JTransforms</artifactId>
+                    <version>3.1</version>
+                    <classifier>with-dependencies</classifier>
+                </dependency>
+                                                                 
+                <dependency>
+                        <groupId>org.knowm.xchart</groupId>
+                        <artifactId>xchart</artifactId>
+                        <version>3.5.2</version>
+                </dependency>
 
-	</build>
-
-	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.knowm.xchart/xchart -->
-		<dependency>
-			<groupId>org.knowm.xchart</groupId>
-			<artifactId>xchart</artifactId>
-			<version>3.5.2</version>
-		</dependency>
-	</dependencies>
-</project>
+                <dependency>
+                        <groupId>org.bytedeco.javacpp-presets</groupId>
+                        <artifactId>fftw</artifactId>
+                        <version>3.3.8-1.4.3</version>
+                </dependency>
+        </dependencies>
+</project>                           
